# libpostal

./: .gitignore  CMakeLists.txt  libpostal.pc.in
src/: CMakeLists.txt  acronyms.h  address_dictionary.c  address_parser.c  address_parser_io.c  averaged_perceptron.c  cartesian_product.c  config.h  crf_context.c  crf_trainer.c  dedupe.c  expand.c  features.c  float_utils.c  graph.c  language_classifier.c  language_classifier_io.c  language_features.c  libpostal.c  logistic_regression_trainer.c  main.c  near_dupe.c  normalize.c  numex.c  regularization.c  scanner.h  sparse_matrix.c  sparse_matrix_utils.c  string_similarity.c  string_utils.c  string_utils.h  tokens.c  tokens.h  trie.c  trie_search.c  unicode_scripts.c
src/linenoise/: linenoise.c
src/sparkey/: buf.h  endiantools.h  util.h
test/: CMakeLists.txt
